refactor: LoanController